<?xml version="1.0" encoding="utf-8"?>
<!--Using Constraint Layout to Chain the views together and that produces
    a nicer ui in different screen sizes,
    and making EditTexts Flexible with keyboard`s Position when typing-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.SharedViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".screens.detail.DetailFragment">

            <EditText
                android:id="@+id/ti_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingVertical="20dp"
                android:text="@={viewModel.name}"
                app:error="@{viewModel.shoeError}"
                app:layout_constraintBottom_toTopOf="@+id/ti_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <EditText
                android:id="@+id/ti_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:inputType="number"
                android:maxLines="1"
                android:paddingVertical="20dp"
                android:text="@={viewModel.size}"
                app:error="@{viewModel.shoeError}"
                app:layout_constraintBottom_toTopOf="@+id/ti_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_name" />

            <EditText
                android:id="@+id/ti_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingVertical="20dp"
                android:text="@={viewModel.company}"
                app:error="@{viewModel.shoeError}"
                app:layout_constraintBottom_toTopOf="@+id/ti_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_size" />

            <EditText
                android:id="@+id/ti_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textAutoComplete"
                android:maxLines="3"
                android:paddingVertical="20dp"
                android:text="@={viewModel.description}"
                app:error="@{viewModel.shoeError}"
                app:layout_constraintBottom_toTopOf="@+id/btn_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_company" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/white"
                android:elevation="18dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_add"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="40dp"
                android:onClick="@{()->viewModel.validateShoeData()}"
                android:text="@string/add_new_shoe"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="@id/btn_cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>