<?xml version="1.0" encoding="utf-8"?>
<!--Using Constraint Layout to Chain the views together and that produces
    a nicer ui in different screen sizes-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_shoe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/to_our_shoe_store"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <ImageView
        android:id="@+id/iv_shoe"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img_blue_shoe"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_shoe" />


</androidx.constraintlayout.widget.ConstraintLayout>