<?xml version="1.0" encoding="utf-8"?>
<!--Using ConstraintLayout to Order the views together and that produces
    a nicer ui in different screen sizes -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/name"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toTopOf="@id/tv_name1" />

        <TextView
            android:id="@+id/tv_size1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/size"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_name1"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/size"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toTopOf="@id/tv_size1" />

        <TextView
            android:id="@+id/tv_company1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/company"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_size1"
            app:layout_constraintTop_toBottomOf="@id/tv_size" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/company"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toTopOf="@id/tv_company1" />

        <TextView
            android:id="@+id/tv_description1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_company1"
            app:layout_constraintTop_toBottomOf="@id/tv_company" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="2dp"
            android:hint="@string/description"
            android:maxLines="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_description1"
            app:layout_constraintTop_toTopOf="@id/tv_description1" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>