<?xml version="1.0" encoding="utf-8"?>
<!--Using Constraint Layout to Align Login Label with Login CardView,
    and ScrollView to make EditTexts Flexible with keyboard`s Position when typing,
    and LinearLayout to align Fields and Buttons Vertically in one column at center-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ViewModel"
            type="com.udacity.shoestore.screens.SharedViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryVariant"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.login.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="?attr/colorOnPrimary"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="40dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailID"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="24dp"
                        android:background="@drawable/rounded_text_input"
                        android:elevation="12dp"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:paddingHorizontal="12dp"
                        android:text="@={ViewModel.email}"
                        app:error="@{ViewModel.emailError}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginTop="18dp"
                        android:background="@drawable/rounded_text_input"
                        android:elevation="12dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="12dp"
                        android:text="@={ViewModel.password}"
                        app:error="@{ViewModel.passwordError}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emailID" />

                    <TextView
                        android:id="@+id/tv_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/forget_password"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@id/password"
                        app:layout_constraintTop_toBottomOf="@id/password" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_new_login"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="18dp"
                        android:onClick="@{()->ViewModel.validateNew()}"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp"
                        app:layout_constraintEnd_toEndOf="@id/emailID"
                        app:layout_constraintStart_toStartOf="@id/emailID"
                        app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="18dp"
                        android:onClick="@{()->ViewModel.validateExisting()}"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp"
                        app:layout_constraintEnd_toEndOf="@id/emailID"
                        app:layout_constraintStart_toStartOf="@id/emailID"
                        app:layout_constraintTop_toBottomOf="@id/btn_new_login" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>