<?xml version="1.0" encoding="utf-8"?>
<!--Using Constraint Layout to Chain the views together and that produces
    a nicer ui in different screen sizes-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.instruction.InstructionsFragment">

    <TextView
        android:id="@+id/tv_add_shoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_shoe"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <FrameLayout
        android:id="@+id/frame_layout_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_list_shoe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_shoe">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:src="@drawable/icons8_add_64" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/icons8_shoe_64" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_list_shoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_all_shoes"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_add" />

    <ImageView
        android:id="@+id/iv_list"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/icons8_align_right_64"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_shoe" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_list" />


</androidx.constraintlayout.widget.ConstraintLayout>